T4T-320 fix for instructional resource  text overlap with footer

--- a/webapp/src/app/resource/printable-section.component.scss
+++ b/webapp/src/app/resource/printable-section.component.scss
@@ -26,6 +26,7 @@
     display: var(--print-display);
     position: var(--print-position);
     visibility: var(--print-visibility);
+    width: 43.75rem;
 
     hr {
       margin-bottom: $spacer;
